# heimdall

./: .copilot-instructions  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  00_PHASE5_COMPLETE_FINAL.md  00_PHASE5_EXECUTIVE_SUMMARY.md  00_START_HERE.md  200MS_MIGRATION_COMPLETE.md  ACCESSO_ACQUISIZIONE_DATI.md  AGENTS.md  ALL_FIXES_COMPLETE.md  ANSWER_TO_YOUR_QUESTION.md  API_GATEWAY_EXPLANATION.md  ARCHITECTURE_VISUAL_GUIDE.md  AUDIO_LIBRARY_FIX_SUMMARY.md  CHANGELOG.md  CI_CONSOLIDATION_SUMMARY.md  CI_DEBUG_GUIDE.md  CI_FIXES_READY_TO_PUSH.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_TEST_FIXES.md  DASHBOARD_WIDGETS_IMPLEMENTATION.md  DATASET_EXPANSION_DEBUG_GUIDE.md  DATASET_VALIDATION_WEBSOCKET_COMPLETE.md  DATA_INGESTION.md  DATA_INGESTION_CHECKLIST.md  DATA_INGESTION_COMPLETE_SUMMARY.md  DATA_INGESTION_FIXED.md  DATA_INGESTION_IMPLEMENTATION.md  DATA_INGESTION_ITALIANO.md  DEBUG_FRONTEND_BACKEND.md  DEPLOY_NOW.md  DIAGNOSTIC_404_ISSUE.md  DOCUMENTATION_INDEX.md  FIX_SUMMARY.md  FRONTEND_OPTIMIZATION_VALIDATION.md  (+240 more)
coverage_reports/: backend.json  index.html
db/: 01-init.sql  init-postgres-broken.sql  init-postgres-fixed.sql  init-postgres.sql  prometheus.yml  rabbitmq.conf
docs/: API.md  ARCHITECTURE.md  AUDIO_LIBRARY_FIX_SUMMARY.md  AUDIO_LIBRARY_IMPORT_EXPORT.md  AUDIO_LIBRARY_IMPORT_EXPORT_TEST_PLAN.md  AUDIO_PREPROCESSING_FIX_SUMMARY.md  AUDIO_PREPROCESSING_FRONTEND.md  AUDIO_PREPROCESSING_TEST_PLAN.md  AUDIO_TEST_QUICKSTART.md  AUDIO_WEIGHTED_SAMPLING.md  AUTHENTICATION_FIX.md  BATCH_EXTRACTION.md  CI_CD_QUICK_REFERENCE.md  CORS_CONFIGURATION.md  CUDA_MIGRATION_GUIDE.md  DATASET_DELETION.md  DEVELOPMENT.md  DOCKER_BUILD_CONTEXT_FIX.md  DOCKER_IMAGE_POLICY.md  FAQ.md  FEATURE_EXTRACTION_TESTING.md  GITHUB_PAGES_SETUP.md  GPU_INFRASTRUCTURE.md  HEALTH_CHECKS.md  HEALTH_CHECKS_SUMMARY.md  HEIMDALLNET.md  HEIMDALLNETPRO.md  IMPLEMENTATION_SUMMARY_FEATURE_EXTRACTION.md  IMPORT_EXPORT.md  IMPORT_EXPORT_UI.md  JOB_CANCELLATION_FIX.md  LOGIN_FIX_VERIFICATION.md  MIGRATION_VISUAL.md  OPENWEBRX_PROTOCOL.md  PAUSE_RESUME_IMPLEMENTATION.md  PHASE3_QUICK_CHECK.md  PHASE3_STATUS_CURRENT.md  PHASE3_WEBSDRS_UPDATED.md  PHASE3_WEBSDRS_UPDATE_SUMMARY.md  PR_SUMMARY_DATASET_DELETION.md  (+52 more)
frontend/: .dockerignore  .env.development  .env.example  .env.test  .eslintrc.json  .gitignore  API_INTEGRATION.md  API_URL_STANDARDS.md  DASHBOARD_TEST_FIXES_SUMMARY.md  DEV_SETUP.md  Dockerfile  MODAL_PORTAL_FIX.md  PERFORMANCE.md  README_FRONTEND.md  TAILWIND_REMOVAL_STATUS.md  WEBSOCKET_AND_ZOD.md  default.conf  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tailwind.config.ts  test_output.txt  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
prompts/: 00-IMPORTANT-CHANGES.md  00-README.md  01-database-schema.md  01_phase5_gpu_setup.md  01b-fix-schema-for-localization.md  02-feature-extractor-core.md  02_phase5_test_pipeline.md  03-iq-generator.md  03_phase5_training_api.md  04-synthetic-pipeline.md  04_phase5_heimdall_export.md  05-real-pipeline.md  05_phase5_frontend_training_ui.md  06-background-jobs.md  07-tests.md
scripts/: analyze_coverage.py  audit_dependencies.py  audit_documentation.py  benchmark_batch_vectorization.py  benchmark_gpu_synthetic.py  build-frontend.sh  check_celery_results.deletable.py  check_celery_results.py  check_types.py  (+82 more)
services/backend/: Dockerfile  debug_import.py  entrypoint.py  pyproject.toml  requirements-test.txt  requirements.txt  rf_acquisition.pth
services/backend/src/: celery_worker.py  config.py  db.py  main.py  rf_client.py
services/backend/src/events/: __init__.py  consumer.py  publisher.py
services/backend/src/export/: __init__.py  heimdall_format.py
services/backend/src/fetchers/: __init__.py  openwebrx_fetcher.py  websdr_fetcher.py
services/backend/src/models/: __init__.py  audio_library.py  constellation.py  db.py  health.py  import_export.py  session.py  settings.py  shares.py  synthetic_data.py  synthetic_data.py.bak  terrain.py  training.py  user.py  websdrs.py
services/backend/src/monitoring/: __init__.py  storage_metrics.py
services/backend/src/processors/: __init__.py  iq_processor.py
services/backend/src/routers/: __init__.py  acquisition.py  admin.py  analytics.py  audio_library.py  constellations.py  health.py  health.py.bak  import_export.py  metrics.py  models.py  sessions.py  settings.py  sources.py  terrain.py  training.py  users.py  websocket.py
services/backend/src/storage/: __init__.py  audio_storage.py  db_manager.py  minio_client.py
services/backend/src/tasks/: __init__.py  acquire_iq.py  audio_preprocessing.py  batch_feature_extraction.py  comprehensive_health_monitor.py  export_task.py  feature_extraction_task.py  minio_lifecycle.py  services_health_monitor.py  training_task.py  uptime_monitor.py
services/backend/src/validators/: __init__.py  dataset_validator.py
services/backend/tests/: README.md  conftest.py  fixtures.py  manual_test_session_update.py  mock_websdrs.py  test_basic_import.py  test_cors_config.py  test_import_export.py  test_known_source_optional_fields.py  test_main.py  test_session_update.py  test_unknown_source_fix.py
services/backend/tests/e2e/: __init__.py  conftest.py  test_api_contracts.py  test_complete_workflow.py  test_openwebrx_acquisition.py
services/backend/tests/integration/: test_acquisition_endpoints.py  test_admin_endpoints.py  test_constellations_rbac.py  test_health_endpoints.py  test_minio_storage.py  test_models_rbac.py  test_timescaledb.py  test_training_workflow.py
services/backend/tests/unit/: test_batch_feature_extraction.py  test_feature_extraction_task_extended.py  test_iq_processor.py  test_services_health_monitor.py  test_websdr_fetcher.py
tauri/: Cargo.toml  tauri.conf.inference.json  tauri.conf.json  tauri.conf.training.json
tauri/src/: lib.rs
tauri/src/commands/: data_collection.rs  gpu.rs  import_export.rs  mod.rs  settings.rs  training.rs
(+1554 files in other folders)
