[package]
name = "heimdall-desktop"
version = "0.3.1"
description = "Heimdall SDR - Real-time radio source localization desktop application"
authors = ["Heimdall Team"]
license = "CC-BY-NC-4.0"
repository = "https://github.com/fulgidus/heimdall"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
