[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdall-rf-acquisition"
version = "0.1.0"
description = "RF Acquisition Service for Heimdall SDR"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "structlog==24.1.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "aiohttp==3.9.1",
    "celery==5.3.4",
    "numpy==1.24.3",
    "scipy==1.11.4",
    "h5py==3.10.0",
    "boto3==1.29.7",
    "websockets==12.0",
]

[project.optional-dependencies]
test = ["pytest==7.4.3", "pytest-asyncio==0.21.1", "httpx==0.25.1"]
dev = ["black==23.12.0", "isort==5.13.2", "flake8==6.1.0", "mypy==1.7.0"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --tb=short"
